<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background= "@color/color_white"
    android:orientation="horizontal" >
   
    <TableRow android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="match_parent">
        
        <TextView android:id="@+id/history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="1"
            android:gravity="right|center"
            android:textSize="20sp"
            android:padding="20dp"
            android:textColor="@color/color_gray"
            android:clickable="true"
            android:onClick="onHistoryActivity"/>
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
        android:layout_weight="2.5"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/display"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:lines="1"
            android:gravity="right|center"
            android:textSize="50sp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/color_gray" />
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
        android:layout_weight="1"
    	android:layout_height="match_parent">

    		<Button
    		    android:id="@+id/button_mPlus"
    		    android:text="@string/button_mPlus"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="7dp"
    		    android:paddingBottom="7dp"
    		    android:textSize="16sp"
    		    android:onClick="onMemoryStore"
 
    		    />
    		
		    <Button
    		    android:id="@+id/button_mMinus"
    		    android:text="@string/button_mMinus"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:textSize="16sp" 
    		    android:paddingTop="7dp"
    		    android:paddingBottom="7dp"
    		    android:onClick="onMemoryStore"
    		    />

		    <Button
		        android:id="@+id/button_mRec"
    		    android:text="@string/button_mRec"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="7dp"
    		    android:paddingBottom="7dp"
    		    android:textSize="16sp" 
    		    android:onClick="onMemoryShow"/>

		    <Button
    		    android:id="@+id/button_mClear"
    		    android:text="@string/button_mClear"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onMemoryClear"
    		    />
    </TableRow>
	
    <TableRow android:layout_width="match_parent"
        android:layout_weight="1"
    	android:layout_height="match_parent">
    		<Button
    		    android:id="@+id/button_AC"
    		    android:text="@string/button_AC"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onResetClick"
    		      		    
    		    />
		    <Button
    		    android:id="@+id/button_back"
    		    android:text="@string/button_back"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onClearClick"
    		    
    		 />
		    <Button
    		    android:id="@+id/button_divide"
    		    android:text="@string/button_divide"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onOperatorClick"
    		   />
		    
		     <Button
    		    android:id="@+id/button_multiply"
    		    android:text="@string/button_multiply"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		   	android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onOperatorClick"
    		   />
		    
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
        android:layout_weight="1"
    	android:layout_height="match_parent">
    		<Button
    		    android:id="@+id/button_seven"
    		    android:text="@string/button_seven"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"
    		 />
    		
		    <Button
    		    android:id="@+id/button_eight"
    		    android:text="@string/button_eight"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"
    		    />

		    <Button
		        android:id="@+id/button_nine"
    		    android:text="@string/button_nine"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"/>

        	<Button
    		    android:id="@+id/button_plus"
    		    android:text="@string/button_plus"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onOperatorClick"
    		    />
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
        android:layout_weight="1"
    	android:layout_height="match_parent">
    		<Button
    		    android:id="@+id/button_four"
    		    android:text="@string/button_four"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"
    		    />
		    <Button
    		    android:id="@+id/button_five"
    		    android:text="@string/button_five"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp"
    		    android:onClick="onNumberClick" />
		    
		    <Button
    		    android:id="@+id/button_six"
    		    android:text="@string/button_six"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"/>
        	<Button
    		    android:id="@+id/button_min"
    		    android:text="@string/button_min"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onOperatorClick"/>
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
        android:layout_weight="1"
    	android:layout_height="match_parent">
    		<Button
    		    android:id="@+id/button_one"
    		    android:text="@string/button_one"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"/>
		    <Button
    		    android:id="@+id/button_two"
    		    android:text="@string/button_two"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"/>
		    
		    <Button
    		    android:id="@+id/button_three"
    		    android:text="@string/button_three"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"/>
		    
        	<Button
    		    android:id="@+id/button_percent"
    		    android:text="@string/button_percent"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onOperatorClick"/>
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
        android:layout_weight="1"
    	android:layout_height="match_parent">
    		<Button
    		    android:id="@+id/button_zero"
    		    android:text="@string/button_zero"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"/>
    		
		    <Button
    		    android:id="@+id/button_dot"
    		    android:text="@string/button_dot"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="1"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onNumberClick"/>
		    
		    <Button
    		    android:id="@+id/button_eq"
    		    android:text="@string/button_equal"
    		    android:layout_width="0dp"
    		    android:layout_height="match_parent"
    		    android:layout_weight="2"
    		    android:background="@drawable/button"
    		    style="@style/buttonStyle"
    		    android:paddingTop="8dp"
    		    android:paddingBottom="8dp"
    		    android:textSize="16sp" 
    		    android:onClick="onEqualClick"/>
    </TableRow>
</TableLayout>
